hphp/hack/test/enum_class_label/typing/enum_class_wrong_place.php
<?hh
<<file:__EnableUnstableFeatures('enum_class_label')>>

#top_level_label;


function f() : void {
  $x = #label_alone_is_error;
  $y = # not_ok;
}
